--- a/assets/src/style/main.scss
+++ b/assets/src/style/main.scss
@@ -15,6 +15,9 @@
 @import "pages/index";
 @import "pages/press";
 @import "pages/reviews";
+@import "pages/clients";
+@import "pages/team";
+@import "pages/vacancies";
 
 //COMPONENTS
 @import "components/mailing";
