--- a/assets/src/template/mailing.html
+++ b/assets/src/template/mailing.html
@@ -4,8 +4,7 @@
             <form action="#" method="post">
                 <div class="mailing__wrap">
                     <div class="mailing__item el-animate">
-                        <input type="email" placeholder="info@eurotime.by
-                        ">
+                        <input type="email" placeholder="info@eurotime.by">
                     </div>
                     <div class="mailing__item el-animate">
                         <input type="submit" value="Подписаться на расылку">
