--- a/assets/src/style/components/body.scss
+++ b/assets/src/style/components/body.scss
@@ -14,6 +14,9 @@ html{
   	-webkit-text-size-adjust: 100%;
   	box-sizing: border-box;
 	overflow-x: hidden;
+	&.fixed{
+		overflow: hidden;
+	}
 }
 
 
