--- a/assets/src/style/components/media.scss
+++ b/assets/src/style/components/media.scss
@@ -249,6 +249,54 @@
     .pdf{
         margin-right: 40px;
     }
+    .reviews__in {
+        padding: 40px 50px 50px 70px;
+    }
+    .reviews__title{
+        font-size: 20px;
+    }
+    .hidden-lg{
+        display: none;
+    }
+    .page-header-sub__item{
+        &.visible-lg{
+            display: block;
+        }  
+    }
+    .clients {
+        margin-bottom: 60px;
+    }
+    .page-map {
+        margin: 60px 0;
+    }
+    .team,
+    .vacancies,
+    .vacancies__list{
+        margin-bottom: 60px;
+    }
+    .team__img {
+        height: 280px;
+    }
+    .team__info {
+        min-height: calc(100% - 230px);
+    }
+    .vacancies-top{
+        margin-bottom: 80px;
+    }
+    .vacancies__in {
+        padding: 40px 40px 40px 45px;
+    }
+    .page-header-nav-sub {
+        padding: 30px 20px;
+        right: -13px;
+        transform: none;
+        top: calc(100% + 19px);
+        &:before{
+            left: auto;
+            transform: none;
+            right: 5px;
+        }
+    }
 }
 
 
@@ -443,6 +491,24 @@
         padding-right: 0;
         max-width: 100%;
         flex: 1;
+    }
+    .reviews__in {
+        padding: 30px 25px 40px 25px;
+    }
+    .clients__item {
+        width: 33.333%;
+    }
+    .team__info {
+        padding: 75px 20px 25px;
+    }
+    .vacancies-top{
+        margin-bottom: 60px;
+    }
+    .vacancies__top {
+        font-size: 20px;
+    }
+    .vacancies__in {
+        padding: 20px;
     }
 }
 
@@ -728,7 +794,7 @@
     }
     .page-pre {
         min-height: auto;
-        padding-bottom: 40px;
+        padding-bottom: 60px;
     }
     .r-tabs-nav {
         display: none;
@@ -752,6 +818,50 @@
     }
     .press-list {
         margin-bottom: 50px;
+    }
+    .reviews{
+        margin-right: 0;
+    }
+    .reviews__item {
+        width: 100%;
+        padding-right: 0;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .r-tabs-panel{
+        .page-news-v {
+            margin-bottom: 0;
+        }
+    }
+    .clients__item {
+        width: 50%;
+    }
+    .r-tabs-panel{
+        .clients{
+            margin-bottom: 0;
+        }
+    }
+    .page-map{
+        height: 300px;
+    }
+    .team__item {
+        width: 50%;
+        margin-bottom: 20px;
+    }
+    .vacancies__top {
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+    }
+    .vacancies__item {
+        width: 100%;
+        padding-right: 0;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    .vacancies__list{
+        margin-right: 0;
     }
 }
 
@@ -979,6 +1089,118 @@
     }
     .paging {
         margin-bottom: 20px;
+    }
+    .reviews__title {
+        font-size: 18px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+    }
+    .reviews__info{
+        margin-bottom: 20px;
+    }
+    .clients__in {
+        padding: 15px;
+    }
+    .clients__icon {
+        height: 64px;
+        margin-bottom: 10px;
+    }
+    .team__item {
+        width: 100%;
+        padding-right: 0;
+    }
+    .team{
+        margin-right: 0;
+    }
+    .vacancies-top__pre{
+        margin-right: 0;
+        margin-bottom: 20px;
+        width: 100%;
+        text-align: center;
+    }
+    .vacancies-top .team__mail,
+    .vacancies-top .team__pnone {
+        margin-bottom: 20px;
+        margin-right: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .menu {
+        position: relative;
+        z-index: 48;
+    }
+    .page-header-sub {
+        padding: 91px 0 0 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        max-height: 100vh;
+        height: 100vh;
+        width: 100%;
+        //overflow-y: auto;
+        background: #f6f6f6;
+        z-index: 44;
+    }
+    .page-header-sub__in {
+        overflow: hidden;
+        overflow-y: auto;
+        height: 100%;
+        display: flex;
+    }
+    .page-header-sub__view {
+        border-top: 1px solid #828282;
+        padding: 25px 10px 50px 10px;
+        margin-top: 15px;
+        width: 100%;
+        position: static;
+    }
+    .page-header-sub__view:before,
+    .page-header-sub__view:after{
+        display: none;
+    }
+    .page-header-sub__link {
+        width: 100%;
+        min-width: 100%;
+        padding-right: 30px;
+    }
+    .page-header-sub__item.m-sub .page-header-sub__link:after{
+        right: 10px;
+    }
+    .page-header-sub__in{
+        .container-fluid{
+            position: static;
+            padding: 0;
+        }
+    }
+    .page-header-sub__item{
+        // position: relative;
+    }
+    // .js-m-sub-mobile-trigger{
+    //     display: block;
+    //     background: red;
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     width: 100%;
+    //     height: 100%;
+    // }
+
+
+
+    .page-header-submenu{
+        left: 100%;
+        min-width: 100%;
+        display: block;
+        top: 0;
+        background: #fff;
+        height: 100%;
+        z-index: 54;
+        padding: 100px 10px 50px;
+    }
+    .page-header-submenu__in {
+        position: static;
+        border-top: 1px solid #828282;
+        padding-top: 25px;
     }
 }
 
