--- a/assets/src/style/pages/reviews.scss
+++ b/assets/src/style/pages/reviews.scss
@@ -1,5 +1,35 @@
 .reviews{
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     display: flex;
     flex-wrap:wrap;
+    margin-right: -20px;
+}
+.reviews__item{
+    width: 50%;
+    padding-right: 20px;
+    margin-bottom: 20px;
+}
+.reviews__in{
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    padding: 70px 90px 74px 100px;
+}
+.reviews__title{
+    font-size: 24px;
+    font-family: 'als_gorizontregular_expanded';
+    line-height: 1.2;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #828282;
+}
+.reviews__info{
+    margin-bottom: 30px;
+}
+.reviews__link{
+    text-align: right;
+    color: $alt-color;
+    font-style: italic;
+    display: block;
+    font-size: 16px;
 }
