--- a/assets/src/template/header.html
+++ b/assets/src/template/header.html
@@ -28,20 +28,61 @@
 					<div class="page-header-nav">
 						<div class="page-header-nav__item m-sub">
 							<a href="#" class="page-header-nav__link">Каталог</a>
+							<div class="page-header-nav-sub">
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Каталог 1</a>
+								</div>
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Каталог 2</a>
+								</div>
+							</div>
 						</div>
 						<div class="page-header-nav__item m-sub">
 							<a href="#" class="page-header-nav__link">Лизинг</a>
+							<div class="page-header-nav-sub">
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Лизинг для юр.лиц</a>
+								</div>
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Лизинг для юр.лиц</a>
+								</div>
+							</div>
 						</div>
 						<div class="page-header-nav__item m-sub">
 							<a href="#" class="page-header-nav__link">Страхование</a>
+							<div class="page-header-nav-sub">
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Страхование 1</a>
+								</div>
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Страхование 2</a>
+								</div>
+								<div class="page-header-nav-sub__item">
+									<a href="#" class="page-header-nav-sub__link">Страхование 3</a>
+								</div>
+								<div class="page-header-nav-sub__item">
+									<a href="#" class="page-header-nav-sub__link">Страхование 4</a>
+								</div>
+							</div>
 						</div>
-						<div class="page-header-nav__item m-sub">
+						<div class="page-header-nav__item m-sub ">
 							<a href="#" class="page-header-nav__link">Услуги</a>
+							<div class="page-header-nav-sub">
+								<div class="page-header-nav-sub__item m-sub">
+									<a href="#" class="page-header-nav-sub__link">Услуги 1</a>
+								</div>
+								<div class="page-header-nav-sub__item">
+									<a href="#" class="page-header-nav-sub__link">Услуги 2</a>
+								</div>
+								<div class="page-header-nav-sub__item">
+									<a href="#" class="page-header-nav-sub__link">Услуги 3</a>
+								</div>
+							</div>
 						</div>
-						<div class="page-header-nav__item">
+						<div class="page-header-nav__item hidden-lg">
 							<a href="#" class="page-header-nav__link">Новости и обзоры</a>
 						</div>
-						<div class="page-header-nav__item">
+						<div class="page-header-nav__item hidden-lg">
 							<a href="#" class="page-header-nav__link">Контакты</a>
 						</div>
 					</div>
@@ -55,6 +96,7 @@
 			<div class="container-fluid">
 				<div class="page-header-sub__view">
 					<div class="page-header-sub__item m-sub">
+						<div class="js-m-sub-mobile-trigger"></div>
 						<a href="#" class="page-header-sub__link">О компании</a>
 						<div class="page-header-submenu">
 							<div class="page-header-submenu__in">
@@ -66,6 +108,7 @@
 						</div>
 					</div>
 					<div class="page-header-sub__item m-sub">
+						<div class="js-m-sub-mobile-trigger"></div>
 						<a href="#" class="page-header-sub__link">Пресс-центр</a>
 						<div class="page-header-submenu">
 							<div class="page-header-submenu__in">
@@ -76,6 +119,7 @@
 						</div>
 					</div>
 					<div class="page-header-sub__item m-sub">
+						<div class="js-m-sub-mobile-trigger"></div>
 						<a href="#" class="page-header-sub__link">Работа у нас</a>
 						<div class="page-header-submenu">
 							<div class="page-header-submenu__in">
@@ -85,6 +129,7 @@
 						</div>
 					</div>
 					<div class="page-header-sub__item m-sub">
+						<div class="js-m-sub-mobile-trigger"></div>
 						<a href="#" class="page-header-sub__link">Инвесторам</a>
 						<div class="page-header-submenu">
 							<div class="page-header-submenu__in">
@@ -93,6 +138,12 @@
 								<a href="#" class="page-header-submeu__link">Инвесторам 3</a>
 							</div>
 						</div>
+					</div>
+					<div class="page-header-sub__item visible-lg">
+						<a href="#" class="page-header-sub__link">Новости и обзоры</a>
+					</div>
+					<div class="page-header-sub__item visible-lg">
+						<a href="#" class="page-header-sub__link">Контакты</a>
 					</div>
 				</div>
 			</div>
